--- a/css/index.css
+++ b/css/index.css
@@ -1680,11 +1680,11 @@ For devices with smaller width like mobile phone
                 box-shadow:0px 0px 0px 0px #c70039 ;
             }
             .portfolio-image img{
-                height: 300px;
+                height: 100%;
                 width: 100%;
             }
             .portfolio-image{
-                height: 300px;
+                height: 100%;
                 width: 90%;
             }
             #navigation-bar img{
@@ -2156,12 +2156,12 @@ for tabs and large phones
                 box-shadow:0px 0px 0px 0px #c70039 ;
             }
             .portfolio-image img{
-                height: 380px;
+                height: 100%;
                 width: 100%;
                 position: relative;
             }
             .portfolio-image{
-                height: 380px;
+                height: 100%;
                 width: 70%;
             }
             #navigation-bar img{
